# mlops_rakuten-multimodal-product-classification

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  dvc.yaml  main.py  pyproject.toml
.claude/: settings.json
.dvc/: config
.github/workflows/: ci.yml
airflow_dst/: .env  Dockerfile  docker-compose.yaml  requirements.txt
airflow_dst/config/: webserver_config.py
airflow_dst/dags/: rakuten_model_promotion.py  rakuten_model_training.py
docs/: CHEATSHEET_GIT_UV_COMMANDS.md  WORKFLOW.md  methodology_phase1.md  methodology_phase2.md  prometheus_queries_cheatsheet.md  retrain_architecture_flow.md  retrain_architecture_flow.mmd
ml/: README.md  mlflow_backfill.py  rakuten_pyfunc.py
models/Model_I12_ConvNeXt_Base_ModerateAug_Full/: README.md  config.py  dataset.py  evaluate.py  recover_logits.py  train.py  utils.py
models/multimodal/MM_CamemBERT_ConvNeXtBase_LateFusion/: README.md  config.py  evaluate.py  utils.py
models/textModeling/Model_T8_CamemBERT_FullFineTune_L128/: README.md  config.py  dataset.py  evaluate.py  recover_features.py  train.py  utils.py
monitoring/evidently/: Dockerfile  app.py  requirements.txt
monitoring/grafana/: entrypoint.sh
monitoring/grafana/dashboards/: api-overview.json
monitoring/grafana/provisioning-slack/: contactpoints.yaml  policies.yaml
monitoring/grafana/provisioning/alerting/: contactpoints.yaml  policies.yaml  rules.yaml
monitoring/prometheus/: prometheus.yml  rules.yml
outputs/: y_logits_camembert_run2_epochs3.npy
outputs/I12_ConvNeXt_Base_ModerateAug_Full/: history.json  run_metadata.json
outputs/T8_CamemBERT_FullFineTune_L128/: history.json  run_metadata.json
outputs/image_modeling/: .gitignore
promotion/: Dockerfile  __init__.py  entrypoint.sh  promote.py  requirements.txt
scripts/: compute_reference_distribution.py  diagnose_disk.sh  git-helper.sh  prepare_splits.py  run_api.sh  run_streamlit.sh  setup_data.ps1  setup_data.sh
scripts/postgres_init/: create_databases.sql
src/: 01_tabular_data_exploration.py  04_image_exploration.py  image_modeling_github_outputs.ipynb  ini.py
src/api/: Dockerfile  db.py  drift.py  main.py  reference_class_distribution.json  requirements.txt  retrain.py
streamlit_app/: Dockerfile  Home.py  Home_ion4.py  drift.rtf  prediction_tool.py  project_story.py  requirements.txt  streamlit_app.py
streamlit_app/config/: prdtypecode_mapping.json
streamlit_app/models/: base.py
streamlit_app/models/camembert_run4/: config.json  label2id.json
streamlit_app/services/: final_fusion_predictor.py  raw_late_fusion_predictor.py
streamlit_app_felix/: Home.py  requirements.txt
tests/: test_api.py  test_drift.py  test_predictor_architecture.py  test_promotion.py  test_retrain.py
trainer/: Dockerfile  entrypoint.sh  requirements.txt
